--- a/community-frontend/src/app.html
+++ b/community-frontend/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/src/lib/assets/petall.svg" />
+		<link rel="icon" href="/src/lib/assets/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
